# nextjs-anchor-codama

./: .gitignore  Anchor.toml  Cargo.toml  README.md  codama.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
clients/js/: package.json
clients/js/src/: index.ts
clients/rust/: Cargo.toml
clients/rust/src/: lib.rs
frontend/: package.json
frontend/app/: page.tsx
frontend/components/: deposit-withdraw.tsx  initialize-card.tsx  solana-provider.tsx
programs/anchor_program/: Cargo.toml
programs/anchor_program/src/: lib.rs
scripts/: check-and-airdrop.js  generate-keypair.js
tests/: litesvm_test.rs  mollusk_test.rs
