[package]
name = "program-client"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde"]

[dependencies]
# solana-sdk = "3.0.0"
# solana-program = "3.0.0"
solana-pubkey = "3.0.0"
solana-instruction = "3.0.0"
solana-account-info = "3.0.0"
solana-program-error = "3.0.0"
solana-cpi = "3.0.0"
borsh = "1.5.1"
serde = { version = "1.0", optional = true }
