[package]
name = "program-client"
version = "0.1.0"
edition = "2021"

[features]
serde = ["dep:serde"]
fetch = ["solana-client", "solana-account"]
# anchor = ["anchor-lang", "solana-pubkey"]

[dependencies]
# solana-sdk = { version = "3.0.0", optional = true }
anchor-lang = { version = "0.31.1", optional = true }
solana-pubkey = "3.0.0"
solana-account = { version = "3.0.0", optional = true }
solana-client = { version = "3.0.0", optional = true }
solana-instruction = "3.0.0"
solana-account-info = "3.0.0"
solana-program-error = "3.0.0"
solana-cpi = "3.0.0"
borsh = "1.5.1"
serde = { version = "1.0", optional = true }
num-derive = "0.4.2"
num-traits = "0.2"
thiserror = "2.0.17"
